--- a/build.gradle
+++ b/build.gradle
@@ -9,13 +9,19 @@ sourceSets.main {
     resources.srcDir("assets/")
 }
 
+sourceCompatibility = 8
+
 repositories {
     mavenCentral()
     maven { url "https://jitpack.io" }
 }
 
 dependencies {
-    implementation "com.github.Anuken.Mindustry:core:$pMindustryVersion"
+    implementation  'com.github.younggam:multi-lib:java-v1.1.0'
+
+    compileOnly "com.github.Anuken.Arc:arc-core:$pMindustryVersion"
+    compileOnly "com.github.Anuken.Mindustry:core:$pMindustryVersion"
+    compileOnly files('libs/annotations-122.jar')
 }
 
 jar {
