--- a/gradle.properties
+++ b/gradle.properties
@@ -5,4 +5,5 @@ pGroup = industrial
 # Version of Mindustry to use (if not working, consult jitpack.io)
 pMindustryVersion = v130
 # Minimum API level for d8 (if you don't know what this is, leave it unless d8 yells at you)
-pMinApi = 26
+pMinApi = 14
+pVer = v134
