--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,6 @@ plugins {
 
 group pGroup
 
-version '1.0'
 
 sourceSets.main {
     java.srcDir("src/")
@@ -30,9 +29,8 @@ jar {
 
 dependencies {
     implementation  'com.github.younggam:multi-lib:java-v1.1.0'
-
-    compileOnly "com.github.Anuken.Arc:arc-core:$pMindustryVersion"
-    compileOnly "com.github.Anuken.Mindustry:core:$pMindustryVersion"
+    annotationProcessor 'com.github.Anuken:jabel:0.4.0'
+    compileOnly "com.github.Anuken.Mindustry:core:$pVer"
 }
 
 task dexify(type: Jar) {
