RESEARCH FOCUS PLEASE WORK
CRASHLOG BUG H

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -7,4 +7,7 @@ iron = Iron
 
 mortar = Mortar
 
+focus.def-first.name = Defensive Focus
+focus.def-first.description = We have to block enemies from coming to our core.\nEffects:\n    Unlock [blue]titanium wall [white]and [gray]steel wall.
 requirements.sectorsCompleted = Capture {0} sectors
+
