--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -8,6 +8,6 @@ iron = Iron
 mortar = Mortar
 
 focus.def-first.name = Defensive Focus
-focus.def-first.description = We have to block enemies from coming to our core.\nEffects:\n    Unlock [blue]titanium wall [white]and [gray]steel wall.
+focus.def-first.description = We have to block enemies from coming to our core.\n\nUnlock:\n\n[blue]Titanium wall[white], [gray]steel wall.
 requirements.sectorsCompleted = Capture {0} sectors
 
