--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -7,7 +7,10 @@ iron = Iron
 
 mortar = Mortar
 
-focus.def-first.name = Defensive Focus
-focus.def-first.description = We have to block enemies from coming to our core.\n\nUnlock:\n\n[blue]Titanium wall[white], [gray]steel wall.
+focus.def-first.name = Wall Effort
+focus.def-first.description = We have to build a wall to delay the enemy's coming.\n\nUnlocks:\n\n[blue]Titanium wall\n[gray]Steel wall
+
+focus.atk-first.name =
 requirements.sectorsCompleted = Capture {0} sectors
+requirements.notUnlocked = Not Unlocked: {0}
 
