abura ga nainda
resource focus done yay

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -7,10 +7,39 @@ iron = Iron
 
 mortar = Mortar
 
-focus.def-first.name = Wall Effort
-focus.def-first.description = We have to build a wall to delay the enemy's coming.\n\nUnlocks:\n\n[blue]Titanium wall\n[gray]Steel wall
+focus.wall-first.name = Wall Effort
+focus.wall-first.description = We have to build a wall to delay the enemy's coming.\n\nUnlocks:\n\n[blue]Titanium wall\n[gray]Steel wall
 
-focus.atk-first.name =
+focus.res-I.name = Resources Effort
+focus.res-I.description = Resources, the basis of everything.\n\nGives: Nothing
+
+focus.res-II.name = Resources Effort I
+focus.res-II.description = Resources, the basis of everything.\n\nGives: Graphite\nMetaglass
+
+focus.res-III.name = Resources Effort II
+focus.res-III.description = Resources, the basis of everything.\n\nGives: Graphite\nMetaglass\nSilicon
+
+focus.res-IV.name = Resources Effort III
+focus.res-IV.description = Resources, the basis of everything.\n\nGives: Silicon\nPlastanium\nPhase fabric
+
+focus.res-V.name = Resources Effort IV
+focus.res-V.description = Resources, the basis of everything.\n\nGives: Plastanium\nPhase fabric\nSurge alloy
+
+focus.ore-I.name = Ore Effort I
+focus.ore-I.description = We can process ores to make resources.\n\nGives: Copper\nLead
+
+focus.ore-II.name = Ore Effort II
+focus.ore-II.description = We can process ores to make resources.\n\nGives: Coal\nSand\nScrap
+
+focus.ore-III.name = Ore Effort III
+focus.ore-III.description = We can process ores to make resources.\n\nGives: Titanium\nThorium
+
+focus.liquid-I.name = S'mpore
+focus.liquid-I.description = Spore pods made from water.\n\nGives:\nSpore pod\n\nUnlocks:\nLiquid Tank
+
+focus.liquid-II.name = Abura ga nainda
+focus.liquid-II.description = There is no fuel.\n\nGives:\nPlastanium
+
 requirements.sectorsCompleted = Capture {0} sectors
 requirements.notUnlocked = Not Unlocked: {0}
 
