--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # Filename of output file (dexify prepends 'dexed-') (people will hate you if it isn't .jar)
-pArtifactFilename = Industrial_Mod.jar
+pArtifactFilename = ages.jar
 # Group of project (should line up with dirs in src/)
-pGroup = industrial
+pGroup = ages
 # Version of Mindustry to use (if not working, consult jitpack.io)
 pMindustryVersion = v135
 # Minimum API level for d8 (if you don't know what this is, leave it unless d8 yells at you)
