--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -7,6 +7,8 @@ iron = Iron
 
 mortar = Mortar
 
+wooden-fence = Wooden Fence
+
 focus.wall-first.name = Wall Effort
 focus.wall-first.description = We have to build a wall to delay the enemy's coming.\n\nUnlocks:\n\n[blue]Titanium wall\n[gray]Steel wall
 
