--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -9,6 +9,9 @@ mortar = Mortar
 
 wooden-fence = Wooden Fence
 
+ages.stat.unitlimit = Maximum unit capacity
+ages.stat.leastunit = Minimum number of units
+
 focus.wall-first.name = Wall Effort
 focus.wall-first.description = We have to build a wall to delay the enemy's coming.\n\nUnlocks:\n\n[blue]Titanium wall\n[gray]Steel wall
 
