--- a/build.gradle
+++ b/build.gradle
@@ -55,5 +55,5 @@ task dexify(type: Jar) {
 }
 
 task buildDex dependsOn "build", "dexify"
-sourceCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = 8
 targetCompatibility = JavaVersion.VERSION_16
