--- a/build.gradle
+++ b/build.gradle
@@ -56,4 +56,4 @@ task dexify(type: Jar) {
 
 task buildDex dependsOn "build", "dexify"
 sourceCompatibility = 8
-
+targetCompatibility = JavaVersion.VERSION_17
