idk what im doing

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -12,6 +12,9 @@ wooden-fence = Wooden Fence
 ages.stat.unitlimit = Maximum unit capacity
 ages.stat.leastunit = Minimum number of units
 
+ages.unitlimit = Can accept up to {0}[] units
+ages.leastunit = Requires at least {0}[] units to work
+
 focus.wall-first.name = Wall Effort
 focus.wall-first.description = We have to build a wall to delay the enemy's coming.\n\nUnlocks:\n\n[blue]Titanium wall\n[gray]Steel wall
 
