--- a/build.gradle
+++ b/build.gradle
@@ -27,12 +27,9 @@ jar {
 }
 
 
-dependencies {
-    annotationProcessor 'com.github.Anuken:jabel:0.4.0'
-    implementation  'com.github.younggam:multi-lib:java-v1.1.0'
-
-    compileOnly "com.github.Anuken.Mindustry:core:v135"
-    compileOnly files('annotations/annotations-release.jar')
+dependencies{
+    annotationProcessor 'com.github.Anuken:jabel:0.8.0'
+    compileOnly "com.github.Anuken.MindustryJitpack:core:75f5e7271e"
     compileOnly "com.github.Anuken.Arc:arc-core:dfcb21ce56"
 }
 
