--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,3 +1,7 @@
+mod.ages.name = Mindustry: Ages
+mod.ages.short = Mindustry: Ages
+mod.ages.description = My first [orange]java [white]Mindustry mod
+
 bar.craftHeat = Factory Heat
 bar.fuelBurn = Fuel
 bar.craftProgress = Progress
