--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -6,6 +6,18 @@ bar.craftHeat = Factory Heat
 bar.fuelBurn = Fuel
 bar.craftProgress = Progress
 
+#Region Focus
+focus.nonerequired = Requires no prerequisite focus
+focus.prerequisite = Requires
+focus.ages-ages.name = Pre-Mindustry Research
+focus.ages-ages.description = We have opened a new system called "Focus". The focus system is an archaic form of the research tree, yet to be improved.
+focus.ages-logging.name = Forestry
+focus.ages-logging.description = Wood is the simplest but weakest material.
+focus.ages-mining.name = Mining
+focus.ages-mining.description = "Who deserves more credit than the wife of a coal miner? Mother was one." - Merle Travis
+focus.ages-charcoal.name = Charcoal
+focus.ages-charcoal.description = Charcoal can be made by burning up wood for a long time, being the easiest fuel to make.
+
 ironOre = Iron Ore
 iron = Iron
 
