--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -2,68 +2,71 @@ mod.ages.name = Mindustry: Ages
 mod.ages.short = Mindustry: Ages
 mod.ages.description = My first [orange]java [white]Mindustry mod
 
+#Region objectives
+requirements.sectorscompleted = Complete {0} or more sectors
+requirements.notunlocked = Mutually Exclusive with: {0}
+requirements.playing = Is In Game
+
+#Region Items
+item.ages-wood.name = Wood
+item.ages-stone.name = Stone
+item.ages-erwat.name = Erwat
+
+#Region Blocks
+block.ages-wooden-fence.name = \uBAA9\uCC45
+
+#Region Focus
+focus = Research Focus
+focus.rewards = {1} {0}
+focus.reward = Add Resources:
+focus.nonerequired = No focus prerequisites
+focus.prerequisite = Focus Prerequisites
+focus.additional = Unlock:
+focus.untilcomplete = Until Research Complete:
+focus.moresectors = Capture [{2}]{0}[] out of {1} more sectors
+focus.researching = Currently Researching
+
+#Region focuses
+focus.ages-ages.name = New Researching System
+focus.ages-ages.description = We have discovered a new research system called "Focus". Being a ancient form of research, it requires additional sector occupations to complete the research, but also has a lot of rewards.
+focus.ages-resource-i.name = Resource Focus I
+focus.ages-recource-i.description = We can fight off enemies more easily by obtaining basic resources.
+focus.ages-resource-ii.name = Resource Focus II
+
+focus.ages-resource-iii.name = Resource Focus III
+
+focus.ages-resource-iv.name = Resource Focus IV
+
+focus.ages-resource-v.name = Resource Focus V
+
+focus.ages-logging.name = Logging Innovation
+focus.ages-logging.description = \uBAA9\uC7AC\uB294 \uAC00\uC7A5 \uC57D\uD558\uBA74\uC11C\uB3C4 \uAC00\uC7A5 \uAC04\uB2E8\uD55C \uC7AC\uB8CC\uC785\uB2C8\uB2E4.
+focus.ages-mining.name = Natural Treasury
+focus.ages-mining.description = \uc554\uc11d\uc740 \uc9c0\uad6c\ub97c \uc774\ub8e8\ub294 \uac00\uc7a5 \ud754\ud55c \uac83\uc911 \ud558\ub098\uc785\ub2c8\ub2e4. \ub098\ubb34\ubcf4\ub2e4 \ub2e8\ub2e8\ud558\uc5ec \uc4f8\ub9cc\ud569\ub2c8\ub2e4.
+focus.ages-charcoal.name = Our First Fuel
+focus.ages-charcoal.description = \ubaa9\ud0c4\uc740 \ub098\ubb34\ub97c \uc7a5\uc2dc\uac04 \ud0dc\uc6cc \ub9cc\ub4e4 \uc218 \uc788\uc2b5\ub2c8\ub2e4. \uaf64 \uc624\ub798 \uac00\uace0 \uc5f0\ub8cc\uc911\uc5d0 \uac00\uc7a5 \uc27d\uac8c \ub9cc\ub4e4 \uc218 \uc788\uc2b5\ub2c8\ub2e4.
+
+#Region UI
+division.width = \uC804\uC7A5\uB108\uBE44
+ui.none = \uC5C6\uC74C
+
+#Region stat
+stat.phase = \uC131\uC7A5 \uB2E8\uACC4
+stat.unitlimit = \uC720\uB2DB {0} / [accent]{1}\uAE30
+stat.leastunit = \uCD5C\uC18C \uC720\uB2DB \uC218
+stat.fencedamage = []\uCCB4\uB825\uC774 \uAC00\uB4DD \uCC2C \uACBD\uC6B0 \uC9C0\uB098\uAC00\uB294 \uC720\uB2DB\uC5D0\uAC8C \uCD08\uB2F9 {0} \uB300\uBBF8\uC9C0\uB97C \uC90D\uB2C8\uB2E4. \uCCB4\uB825\uC774 \uB0AE\uC544\uC9C8\uC218\uB85D \uC8FC\uB294 \uB300\uBBF8\uC9C0\uAC00 \uAC10\uC18C\uD569\uB2C8\uB2E4.
+stat.fuel = \uC5F0\uB8CC
+stat.heat = \uC5F4
+stat.calories = \uC5D0\uB108\uC9C0
+stat.growtime = \uC131\uC7A5 \uC2DC\uAC04
+
+#Region StatValues
+statvalue.phase = \uB2E8\uACC4
+
+#Region bar
+bar.farmprogress = \uC131\uC7A5\uB3C4
 bar.craftHeat = Factory Heat
 bar.fuelBurn = Fuel
 bar.craftProgress = Progress
-
-#Region Focus
-focus.nonerequired = Requires no prerequisite focus
-focus.prerequisite = Requires
-focus.ages-ages.name = Pre-Mindustry Research
-focus.ages-ages.description = We have opened a new system called "Focus". The focus system is an archaic form of the research tree, yet to be improved.
-focus.ages-logging.name = Forestry
-focus.ages-logging.description = Wood is the simplest but weakest material.
-focus.ages-mining.name = Mining
-focus.ages-mining.description = "Who deserves more credit than the wife of a coal miner? Mother was one." - Merle Travis
-focus.ages-charcoal.name = Charcoal
-focus.ages-charcoal.description = Charcoal can be made by burning up wood for a long time, being the easiest fuel to make.
-
-ironOre = Iron Ore
-iron = Iron
-
-mortar = Mortar
-
-wooden-fence = Wooden Fence
-
-ages.stat.unitlimit = Maximum unit capacity
-ages.stat.leastunit = Minimum number of units
-
-ages.unitlimit = Can accept up to {0}[] units
-ages.leastunit = Requires at least {0}[] units to work
-
-focus.wall-first.name = Wall Effort
-focus.wall-first.description = We have to build a wall to delay the enemy's coming.\n\nUnlocks:\n\n[blue]Titanium wall\n[gray]Steel wall
-
-focus.res-I.name = Resources Effort
-focus.res-I.description = Resources, the basis of everything.\n\nGives: Nothing
-
-focus.res-II.name = Resources Effort I
-focus.res-II.description = Resources, the basis of everything.\n\nGives: Graphite\nMetaglass
-
-focus.res-III.name = Resources Effort II
-focus.res-III.description = Resources, the basis of everything.\n\nGives: Graphite\nMetaglass\nSilicon
-
-focus.res-IV.name = Resources Effort III
-focus.res-IV.description = Resources, the basis of everything.\n\nGives: Silicon\nPlastanium\nPhase fabric
-
-focus.res-V.name = Resources Effort IV
-focus.res-V.description = Resources, the basis of everything.\n\nGives: Plastanium\nPhase fabric\nSurge alloy
-
-focus.ore-I.name = Ore Effort I
-focus.ore-I.description = We can process ores to make resources.\n\nGives: Copper\nLead
-
-focus.ore-II.name = Ore Effort II
-focus.ore-II.description = We can process ores to make resources.\n\nGives: Coal\nSand\nScrap
-
-focus.ore-III.name = Ore Effort III
-focus.ore-III.description = We can process ores to make resources.\n\nGives: Titanium\nThorium
-
-focus.liquid-I.name = S'mpore
-focus.liquid-I.description = Spore pods made from water.\n\nGives:\nSpore pod\n\nUnlocks:\nLiquid Tank
-
-focus.liquid-II.name = Abura ga nainda
-focus.liquid-II.description = There is no fuel.\n\nGives:\nPlastanium
-
-requirements.sectorsCompleted = Capture {0} sectors
-requirements.notUnlocked = Not Unlocked: {0}
-
+bar.unitlimit = \uCD5C\uB300 \uC720\uB2DB {0}[]\uAE30\uAE4C\uC9C0 \uC218\uC6A9 \uAC00\uB2A5
+bar.leastunit = \uC720\uB2DB \uCD5C\uC18C {0}[]\uAE30 \uD544\uC694
