--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,19 +1,20 @@
-mod.ages.name = Mindustry: Ages
-mod.ages.short = Mindustry: Ages
-mod.ages.description = My first [orange]java [white]Mindustry mod
+mod.focus.name = Mindustry: Ages
+mod.focus.short = Mindustry: Ages
+mod.focus.description = My first [orange]java [white]Mindustry mod
 
 #Region objectives
 requirements.sectorscompleted = Complete {0} or more sectors
-requirements.notunlocked = Mutually Exclusive with: {0}
-requirements.playing = Is In Game
+requirements.notunlocked = Mutually exclusive with: {0}
+requirements.playing = Is ingame
+requirements.unlocked = {0} Research complete
 
 #Region Items
-item.ages-wood.name = Wood
-item.ages-stone.name = Stone
-item.ages-erwat.name = Erwat
+item.focus-sinar.name = Sinar
+item.focus-stone.name = Stone
+item.focus-erwat.name = Erwat
 
 #Region Blocks
-block.ages-wooden-fence.name = \uBAA9\uCC45
+block.focus-wooden-fence.name = \uBAA9\uCC45
 
 #Region Focus
 focus = Research Focus
@@ -27,24 +28,24 @@ focus.moresectors = Capture [{2}]{0}[] out of {1} more sectors
 focus.researching = Currently Researching
 
 #Region focuses
-focus.ages-ages.name = New Researching System
-focus.ages-ages.description = We have discovered a new research system called "Focus". Being a ancient form of research, it requires additional sector occupations to complete the research, but also has a lot of rewards.
-focus.ages-resource-i.name = Resource Focus I
-focus.ages-recource-i.description = We can fight off enemies more easily by obtaining basic resources.
-focus.ages-resource-ii.name = Resource Focus II
+focus.focus-focus.name = New Researching System
+focus.focus-focus.description = We have discovered a new research system called "Focus". Being a ancient form of research, it requires additional sector occupations to complete the research, but also has a lot of rewards.
+focus.focus-resource-i.name = Resource Focus I
+focus.focus-recource-i.description = We can fight off enemies more easily by obtaining basic resources.
+focus.focus-resource-ii.name = Resource Focus II
 
-focus.ages-resource-iii.name = Resource Focus III
+focus.focus-resource-iii.name = Resource Focus III
 
-focus.ages-resource-iv.name = Resource Focus IV
+focus.focus-resource-iv.name = Resource Focus IV
 
-focus.ages-resource-v.name = Resource Focus V
+focus.focus-resource-v.name = Resource Focus V
 
-focus.ages-logging.name = Logging Innovation
-focus.ages-logging.description = \uBAA9\uC7AC\uB294 \uAC00\uC7A5 \uC57D\uD558\uBA74\uC11C\uB3C4 \uAC00\uC7A5 \uAC04\uB2E8\uD55C \uC7AC\uB8CC\uC785\uB2C8\uB2E4.
-focus.ages-mining.name = Natural Treasury
-focus.ages-mining.description = \uc554\uc11d\uc740 \uc9c0\uad6c\ub97c \uc774\ub8e8\ub294 \uac00\uc7a5 \ud754\ud55c \uac83\uc911 \ud558\ub098\uc785\ub2c8\ub2e4. \ub098\ubb34\ubcf4\ub2e4 \ub2e8\ub2e8\ud558\uc5ec \uc4f8\ub9cc\ud569\ub2c8\ub2e4.
-focus.ages-charcoal.name = Our First Fuel
-focus.ages-charcoal.description = \ubaa9\ud0c4\uc740 \ub098\ubb34\ub97c \uc7a5\uc2dc\uac04 \ud0dc\uc6cc \ub9cc\ub4e4 \uc218 \uc788\uc2b5\ub2c8\ub2e4. \uaf64 \uc624\ub798 \uac00\uace0 \uc5f0\ub8cc\uc911\uc5d0 \uac00\uc7a5 \uc27d\uac8c \ub9cc\ub4e4 \uc218 \uc788\uc2b5\ub2c8\ub2e4.
+focus.focus-logging.name = New Wood
+focus.focus-logging.description = What we first see in this planet are huge clusters of red tall columns, sharp at the top. Surprisingly, its chemical composition is very similar with that of wood, just bigger and a lot harder.
+focus.focus-mining.name = Natural Treasury
+focus.focus-mining.description = Below the terrain seems to be masses of blueish-gray, hard material and some shiny things. We should find out how to obtain and use these.
+focus.focus-charcoal.name = Our First Fuel
+focus.focus-charcoal.description = \ubaa9\ud0c4\uc740 \ub098\ubb34\ub97c \uc7a5\uc2dc\uac04 \ud0dc\uc6cc \ub9cc\ub4e4 \uc218 \uc788\uc2b5\ub2c8\ub2e4. \uaf64 \uc624\ub798 \uac00\uace0 \uc5f0\ub8cc\uc911\uc5d0 \uac00\uc7a5 \uc27d\uac8c \ub9cc\ub4e4 \uc218 \uc788\uc2b5\ub2c8\ub2e4.
 
 #Region UI
 division.width = \uC804\uC7A5\uB108\uBE44
