--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,6 @@
 # Filename of output file (dexify prepends 'dexed-') (people will hate you if it isn't .jar)
-pArtifactFilename = ages.jar
+pArtifactFilename = focuslib.jar
 # Group of project (should line up with dirs in src/)
-pGroup = ages
-# Version of Mindustry to use (if not working, consult jitpack.io)
-pMindustryVersion = v137
+pGroup = focus
 # Minimum API level for d8 (if you don't know what this is, leave it unless d8 yells at you)
 pMinApi = 14
