[bugfix] Set node's minimum width, fix sector capture requirement problem

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,6 +1,6 @@
 focus.title = Focus System Example
 
-requirements.sectorscompleted = Complete more than {0} sectors.
+requirements.sectorscompleted = Capture more than {0} sectors.
 requirements.notunlocked = Mutually exclusive with: {0}
 requirements.playing = Capturing a sector in progress.
 requirements.unlocked = Unlocked content: {0}
