--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,4 +1,4 @@
-focus.title = Focus System Example
+focus.title = Focus System
 
 requirements.sectorscompleted = Capture more than {0} sectors.
 requirements.notunlocked = Mutually exclusive with: {0}
@@ -7,18 +7,18 @@ requirements.unlocked = Unlocked content: {0}
 
 focus = Research Focus
 focus.rewards = {1} {0}
-focus.reward = Rewards when completed:
-focus.nonerequired = No prerequisite focus required.
+focus.reward = Rewards:
+focus.nonerequired = Prerequisite focuses aren't required.
 focus.prerequisite = Prerequisite focus:
 focus.additional = Unlock contents:
-focus.untilcomplete = Until research complete:
-focus.moresectors = Capture [{2}]{0}[] / {1} additional sectors.
-focus.researching = Currently Researching
+focus.untilcomplete = Until completion:
+focus.moresectors = Capture [{2}]{0}[] / {1} new sector(s).
+focus.researching = Current focus:
 
 
 # Examples
-focus.focus-lib-example.name = Example Focus
-focus.focus-lib-example.description = Example Focus 1
+focus.focus-lib-example.name = Getting Started
+focus.focus-lib-example.description =
 
-focus.focus-lib-advanced.name = Ex2
-focus.focus-lib-advanced.description = Example Focus 2
+focus.focus-lib-advanced.name = Our first defense
+focus.focus-lib-advanced.description =
