--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ ext {
 repositories {
     mavenCentral()
     maven{ url "https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository" }
-    maven {url "https://jitpack.io"}
+    maven{ url "https://jitpack.io" }
 }
 
 jar {
@@ -31,9 +31,10 @@ jar {
 
 
 dependencies{
-    annotationProcessor 'com.github.Anuken:jabel:$jabelVersion'
-    compileOnly "com.github.anuken.mindustryjitpack:core:$mindustryVersion"
+    compileOnly "com.github.anuken.Mindustry:core:$mindustryVersion"
     compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
+
+    annotationProcessor "com.github.Anuken:jabel:$jabelVersion"
 }
 
 configurations.all{
