--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,17 @@ pArtifactFilename = focuslib.jar
 pGroup = focus
 # Minimum API level for d8 (if you don't know what this is, leave it unless d8 yells at you)
 pMinApi = 14
+
+org.gradle.jvmargs=--illegal-access=permit \
+--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
+--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED \
+--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED \
+--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED \
+--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
+--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED \
+--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
+--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
+--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED \
+--add-exports=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED \
+--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED \
+--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED
