--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,11 +1,15 @@
 focus.title = Focus System
 
+mod.focus-lib.name = [gold]Focus [white]Library[]
+mod.focus-lib.description = A library for implementing [accent]Focus[] research system[][white]into other mods.
+
 requirements.sectorscompleted = Capture more than {0} sectors.
 requirements.notunlocked = Mutually exclusive with: {0}
 requirements.playing = Capturing a sector in progress.
 requirements.unlocked = Unlocked content: {0}
 
 focus = Research Focus
+focus.none = [red]None
 focus.rewards = {1} {0}
 focus.reward = Rewards:
 focus.nonerequired = Prerequisite focuses aren't required.
