[feat] research abortion

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -17,7 +17,11 @@ focus.prerequisite = Prerequisite focus:
 focus.additional = Unlock contents:
 focus.untilcomplete = Until completion:
 focus.moresectors = Capture [{2}]{0}[] / {1} new sector(s).
-focus.researching = Current focus:
+focus.researching = Current focus
+focus.stop = Stop the Research
+focus.stop.ask = Would you like to stop the ongoing research? Progress will be lost.
+focus.stop.yes = Yes
+focus.stop.no = No
 
 
 # Examples
