--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -16,6 +16,7 @@ focus.nonerequired = Prerequisite focuses aren't required.
 focus.prerequisite = Prerequisite focus:
 focus.additional = Unlock contents:
 focus.untilcomplete = Until completion:
+focus.nosectors = No additional sectors required.
 focus.moresectors = Capture [{2}]{0}[] / {1} new sector(s).
 focus.researching = Current focus
 focus.stop = Stop the Research
@@ -26,7 +27,7 @@ focus.stop.no = No
 
 # Examples
 focus.focus-lib-example.name = Getting Started
-focus.focus-lib-example.description =
+focus.focus-lib-example.description = Getting Started
 
 focus.focus-lib-advanced.name = Our first defense
-focus.focus-lib-advanced.description =
+focus.focus-lib-advanced.description = Our first defense
