focus sounds kinda awkward

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,33 +1,33 @@
-focus.title = Focus System
+quests.title = Focus System
 
-mod.focus-lib.name = [gold]Focus [white]Library[]
-mod.focus-lib.description = A library for implementing [accent]Focus[] research system[][white]into other mods.
+mod.quests-lib.name = [gold]Focus [white]Library[]
+mod.quests-lib.description = A library for implementing [accent]Focus[] research system[][white]into other mods.
 
 requirements.sectorscompleted = Capture more than {0} sectors.
 requirements.notunlocked = Mutually exclusive with: {0}
 requirements.playing = Capturing a sector in progress.
 requirements.unlocked = Unlocked content: {0}
 
-focus = Research Focus
-focus.none = [red]None
-focus.rewards = {1} {0}
-focus.reward = Rewards:
-focus.nonerequired = Prerequisite focuses aren't required.
-focus.prerequisite = Prerequisite focus:
-focus.additional = Unlock contents:
-focus.untilcomplete = Until completion:
-focus.nosectors = No additional sectors required.
-focus.moresectors = Capture [{2}]{0}[] / {1} new sector(s).
-focus.researching = Current focus
-focus.stop = Stop the Research
-focus.stop.ask = Would you like to stop the ongoing research? Progress will be lost.
-focus.stop.yes = Yes
-focus.stop.no = No
+quests = Research Focus
+quests.none = [red]None
+quests.rewards = {1} {0}
+quests.reward = Rewards:
+quests.nonerequired = Prerequisite focuses aren't required.
+quests.prerequisite = Prerequisite quests:
+quests.additional = Unlock contents:
+quests.untilcomplete = Until completion:
+quests.nosectors = No additional sectors required.
+quests.moresectors = Capture [{2}]{0}[] / {1} new sector(s).
+quests.researching = Current quests
+quests.stop = Stop the Research
+quests.stop.ask = Would you like to stop the ongoing research? Progress will be lost.
+quests.stop.yes = Yes
+quests.stop.no = No
 
 
 # Examples
-focus.focus-lib-example.name = Getting Started
-focus.focus-lib-example.description = Getting Started
+quests.quests-lib-example.name = Getting Started
+quests.quests-lib-example.description = Getting Started
 
-focus.focus-lib-advanced.name = Our first defense
-focus.focus-lib-advanced.description = Our first defense
+quests.quests-lib-advanced.name = Our first defense
+quests.quests-lib-advanced.description = Our first defense
